--- a/style.css
+++ b/style.css
@@ -1,1 +1,89 @@
-/*# sourceMappingURL=style.css.map */
+@charset "UTF-8";
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+header {
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
+  padding-top: 31px;
+  padding-left: 37px;
+}
+
+.navbar {
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* ======== LOGO ======== */
+.logo {
+  display: flex;
+  align-items: center;
+  max-width: 245px;
+}
+
+/* ======== MENU ======== */
+nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+nav ul li a {
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #4b5563;
+  transition: color 0.2s ease;
+}
+
+nav ul li a:hover {
+  color: #10B981;
+}
+
+/* ======== BOTÃO ======== */
+.btn1 {
+  background-color: #16A34A;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #F0FDF4;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 30px;
+  padding-left: 30px;
+  border: 1px;
+  border-radius: 6px;
+  border-color: #21C05C;
+  font-weight: 500;
+  text-decoration: none;
+  align-self: flex-end;
+}
+
+.btn:hover {
+  background-color: #16A34A;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+  }
+  .navbar img {
+    max-width: 245px;
+    height: 43px;
+  }
+}/*# sourceMappingURL=style.css.map */
