--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ header {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
   padding-top: 31px;
   padding-left: 37px;
+  border-bottom: #B4AEAE;
 }
 
 .navbar {
@@ -78,6 +79,92 @@ nav ul li a:hover {
   background-color: #16A34A;
 }
 
+.session1 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 4rem 8%;
+  background-color: #fff;
+  flex-wrap: wrap;
+}
+.session1 .TextosBanner1 {
+  max-width: 550px;
+}
+.session1 h1 {
+  font-size: 3rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  color: #1F2937;
+  margin-bottom: 1rem;
+  line-height: 1.2;
+}
+.session1 p {
+  font-size: 1.1rem;
+  font-family: "Poppins", sans-serif;
+  color: #4B5563;
+  margin-bottom: 2rem;
+}
+.session1 .buttonsbanner1 {
+  display: flex;
+  gap: 1rem;
+}
+.session1 .buttonsbanner1 img {
+  justify-content: center;
+  margin-left: 5px;
+}
+.session1 .buttonsbanner1 .btn {
+  display: inline-block;
+  height: 62px;
+  padding: 0.9rem 1.8rem;
+  border-radius: 8px;
+  font-size: 1rem;
+  font-weight: 500;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+.session1 .buttonsbanner1 .btnprimeiro {
+  background-color: #16A34A;
+  border-color: #16A34A;
+  color: white;
+}
+.session1 .buttonsbanner1 .btnprimeiro:hover {
+  background-color: #16A34A;
+}
+.session1 .buttonsbanner1 .btnsegundo {
+  list-style-image: #2563EB;
+  border: 2px solid #2563EB;
+  color: #2563EB;
+}
+.session1 .buttonsbanner1 .btnsegundo:hover {
+  background-color: #2563EB;
+  color: #fff;
+}
+
+.session2 {
+  background-color: #F3F5F8;
+  width: 100%;
+  height: 184px;
+  top: 703px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 2rem 0;
+}
+.session2 h3 {
+  font-size: 2.5rem;
+  color: #16A34A;
+  margin-bottom: 10px;
+  font-weight: bold;
+  text-align: center;
+  font-family: "Inter", sans-serif;
+}
+.session2 p {
+  font-family: "Poppins", sans-serif;
+  color: #4B5563;
+  font-size: 0.7rem;
+  text-align: center;
+}
+
 @media (max-width: 768px) {
   .navbar {
     flex-direction: column;
@@ -86,4 +173,34 @@ nav ul li a:hover {
     max-width: 245px;
     height: 43px;
   }
+}
+@media (max-width: 768px) {
+  .session1 {
+    flex-direction: column;
+    text-align: center;
+    text-align: left;
+    gap: 1rem;
+  }
+  .session1 h1 {
+    font-size: 3rem;
+  }
+  .session1 p {
+    font-size: 1rem;
+  }
+  .session1 .buttonsbanner1 mg {
+    width: 1rem;
+  }
+  .session1 .buttonsbanner1 .ImagemBanner {
+    max-width: 80%;
+  }
+}
+.session2 {
+  gap: 1rem;
+  padding: 35px 20px;
+}
+.session2 .item h3 {
+  font-size: 1.6rem;
+}
+.session2 .item p {
+  font-size: 0.8rem;
 }/*# sourceMappingURL=style.css.map */
