--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,7 @@
       box-shadow: 0 1px 2px rgba(0,0,0,0.08);
       padding-top: 31px;
       padding-left: 37px;
+      border-bottom: #B4AEAE;
     }
 
     .navbar {
@@ -24,7 +25,6 @@
       align-items: center;
       max-width: 245px;
     }
-
 
     /* ======== MENU ======== */
     nav{
@@ -78,12 +78,156 @@
       background-color: #16A34A;
     }
 
+    // BANNER PRINCIPAL SESSÃO 1
+
+  .session1{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 4rem 8%;
+  background-color: #fff;
+  flex-wrap: wrap;
+
+  .TextosBanner1{
+    max-width: 550px;
+  }
+
+    h1 {
+      font-size: 3rem;
+      font-family: 'Poppins', sans-serif;
+      font-weight: 700;
+      color: #1F2937;
+      margin-bottom: 1rem;
+      line-height: 1.2;
+    }
+
+    p {
+      font-size: 1.1rem;
+      font-family: 'Poppins', sans-serif;
+      color: #4B5563;
+      margin-bottom: 2rem;
+    }
+
+    .buttonsbanner1 {
+      display: flex;
+      gap: 1rem;
+
+      img{
+        justify-content: center;
+        margin-left: 5px;
+      }
+
+      .btn {
+        display: inline-block;
+        height: 62px;
+        padding: 0.9rem 1.8rem;
+        border-radius: 8px;
+        font-size: 1rem;
+        font-weight: 500;
+        text-decoration: none;
+        transition: all 0.3s ease;
+      }
+
+      .btnprimeiro {
+        background-color: #16A34A;
+        border-color: #16A34A;
+        color: white;
+
+        &:hover {
+          background-color: #16A34A;
+        }
+      }
+
+      .btnsegundo {
+        list-style-image: #2563EB;
+        border: 2px solid #2563EB;
+        color: #2563EB;
+
+        &:hover {
+          background-color: #2563EB;
+          color: #fff;
+        }
+      }
+    }
+  }
+
+  //SESSÃO 2 - FAIXA COM NÚMEROS
+
+  .session2{
+    background-color: #F3F5F8;
+    width: 100%;
+    height: 184px;
+    top: 703px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 2rem 0;
+
+    h3{
+      font-size: 2.5rem;
+      color: #16A34A;
+      margin-bottom: 10px;
+      font-weight: bold;
+      text-align: center;
+      font-family: 'Inter', sans-serif;
+    }
+    p{
+      font-family: 'Poppins', sans-serif;
+      color: #4B5563;
+      font-size: 0.7rem;
+      text-align: center;
+    }
+  }
+
+  // RESPONSIVIDADE 
+
 @media(max-width:768px){
   .navbar{
     flex-direction: column;
+
     img{
       max-width: 245px;
       height: 43px;
     }
   }
 }
+
+@media(max-width:768px){
+  .session1{
+  flex-direction: column;
+  text-align: center;
+  text-align: left;
+  gap: 1rem;
+
+    h1{
+      font-size: 3rem;
+    }
+
+    p{
+      font-size: 1rem;
+    }
+
+    .buttonsbanner1{
+      mg {
+        width: 1rem;
+      }
+    
+      .ImagemBanner{
+        max-width: 80%;
+      }
+    }
+  }
+}
+  .session2{
+    gap: 1rem;
+    padding: 35px 20px;
+
+    .item {
+      h3{
+        font-size: 1.6rem;
+      }
+      p{
+        font-size: 0.8rem;
+      }
+    }
+  }
