--- a/style.scss
+++ b/style.scss
@@ -312,6 +312,97 @@
   }
 }
 
+// SESSÃO 4 PRODUTOS DISPONÍVEIS
+
+.produtos-disponiveis{
+  background-color: #F3F5F8;
+  text-align: center;
+  padding: 4rem 8%;
+
+  h2 {
+    font-size: 2.2rem;
+    font-family: 'Poppins', sans-serif;
+    text-align: start;
+    font-weight: 700;
+    color: #1a1a1a;
+    margin-bottom: 0.5rem;
+  }
+
+  .subtitulo {
+    font-size: 1.2rem;
+    font-family: 'Inter', sans-serif;
+    text-align: start;
+    color: #555;
+    margin-bottom: 3rem;
+  }
+
+  .cards-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    gap: 2rem;
+    flex-wrap: wrap; // permite quebrar em telas menores
+  }
+
+  .card {
+    background-color: #fff;
+    border: 2px solid #16A34A;
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+    width: 300px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  &:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    img {
+      width: 100%;
+      height: 220px;
+      object-fit: cover;
+      border-bottom: 1px solid #eaeaea;
+    }
+
+    h3 {
+      font-size: 1.2rem;
+      font-family: 'Inter', sans-serif;
+      font-weight: 600;
+      color: #1a1a1a;
+      margin-top: 1rem;
+    }
+
+    p {
+      font-size: 1rem;
+      font-family: 'Poppins', sans-serif;
+      color: #555;
+      margin: 0.5rem 1rem 1.5rem;
+    }
+
+    .btn {
+      background-color: #16A34A;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      padding: 0.6rem 1.5rem;
+      font-size: 1rem;
+      font-family: 'Inter', sans-serif;
+      font-weight: 500;
+      cursor: pointer;
+      margin-bottom: 1.5rem;
+      transition: background 0.3s ease;
+
+      &:hover {
+        background-color: #1ea653;
+      }
+    }
+}
 
   // RESPONSIVIDADE 
 
@@ -413,4 +504,34 @@
        }
       }
     }
+    // RESPONSIVIDADE SESSÃO 4 PRODUTOS DISPONÍVEIS
+
+    @media (max-width: 768px){
+      .produtos-disponiveis{
+        padding: 3rem 5%;
+
+        h2 {
+          font-size: 1.8rem;
+          text-align: center;
+        }
+
+        .subtitulo {
+          font-size: 1rem;
+          margin-bottom: 2rem;
+          text-align: center;
+        }
+
+        .cards-container {
+          flex-direction: column; // empilha os cards
+          align-items: center; //centraliza horizontalmente
+          gap: 1.5rem;
+        }
+
+        .card {
+          width: 100%;
+          max-width: 360px; // limite para não ficar largo demais
+        }
+      }
+    }
+
   }
