--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
   padding-top: 31px;
   padding-left: 37px;
-  border-bottom: #B4AEAE;
+  border-bottom: 1px solid #B4AEAE;
 }
 
 .navbar {
@@ -441,20 +441,20 @@ nav ul li a:hover {
 @media (max-width: 768px) {
   /* ===== HEADER / NAVBAR ===== */
   .navbar {
+    display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     padding: 20px;
-    text-align: center;
   }
   .navbar img {
     width: 200px;
-    align-items: flex-start;
-    margin-bottom: 10px;
-    padding-left: 0px;
   }
   .navbar nav {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
     gap: 15px;
   }
@@ -465,6 +465,7 @@ nav ul li a:hover {
     gap: 10px;
     list-style: none;
     padding: 0;
+    margin: 0;
   }
   .navbar .btn1 {
     background-color: #2ecc71;
@@ -475,9 +476,6 @@ nav ul li a:hover {
     cursor: pointer;
     font-weight: 600;
     font-size: 1rem;
-    width: 100%;
-    max-width: 260px;
-    text-align: center;
   }
   /* ===== SESSÃO 1 - BANNER PRINCIPAL ===== */
   .session1 {
