--- a/style.scss
+++ b/style.scss
@@ -10,7 +10,7 @@
       box-shadow: 0 1px 2px rgba(0,0,0,0.08);
       padding-top: 31px;
       padding-left: 37px;
-      border-bottom: #B4AEAE;
+      border-bottom: 1px solid #B4AEAE;
     }
 
     .navbar {
@@ -506,53 +506,53 @@
   }
 }
 
-// RESPONSIVIDADE
+//* ===== RESPONSIVIDADE ===== */
 
 @media (max-width: 768px) {
+  
   /* ===== HEADER / NAVBAR ===== */
   .navbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+
+  img {
+    width: 200px;
+  }
+
+  nav {
+    display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
-    padding: 20px;
-    text-align: center;
+    gap: 15px;
 
-    img {
-      width: 200px;
-      align-items: flex-start;
-      margin-bottom: 10px;
-      padding-left: 0px;
-    }
-
-    nav {
+    ul {
       display: flex;
       flex-direction: row;
       align-items: center;
-      gap: 15px;
-
-      ul {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 10px;
-        list-style: none;
-        padding: 0;
-      }
-    }
-
-    .btn1 {
-      background-color: #2ecc71;
-      color: white;
-      border: none;
-      padding: 12px 28px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: 600;
-      font-size: 1rem;
-      width: 100%;
-      max-width: 260px;
-      text-align: center;
+      gap: 10px;
+      list-style: none;
+      padding: 0;
+      margin: 0;
     }
   }
+
+  .btn1 {
+    background-color: #2ecc71;
+    color: white;
+    border: none;
+    padding: 12px 28px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 1rem;
+    
+  }
+}
 
   /* ===== SESSÃO 1 - BANNER PRINCIPAL ===== */
   .session1 {
